; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_arqmgr.c_ARQM_Init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_arqmgr.c_ARQM_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__ARQMStackLocation = common dso_local global i64 0, align 8
@__ARQMStackPointer = common dso_local global i32* null, align 8
@__ARQMFreeBytes = common dso_local global i64 0, align 8
@ARQM_ZEROBYTES = common dso_local global i32 0, align 4
@__ARQMZeroBuffer = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ARQM_Init(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp sle i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %34

9:                                                ; preds = %2
  store i64 0, i64* @__ARQMStackLocation, align 8
  %10 = load i32, i32* %3, align 4
  %11 = load i32*, i32** @__ARQMStackPointer, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  store i32 %10, i32* %12, align 4
  %13 = load i64, i64* %4, align 8
  store i64 %13, i64* @__ARQMFreeBytes, align 8
  store i32 0, i32* %5, align 4
  br label %14

14:                                               ; preds = %27, %9
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = load i32, i32* @ARQM_ZEROBYTES, align 4
  %18 = sext i32 %17 to i64
  %19 = udiv i64 %18, 4
  %20 = icmp ult i64 %16, %19
  br i1 %20, label %21, label %30

21:                                               ; preds = %14
  %22 = load i64, i64* @__ARQMZeroBuffer, align 8
  %23 = inttoptr i64 %22 to i32*
  %24 = load i32, i32* %5, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  store i32 0, i32* %26, align 4
  br label %27

27:                                               ; preds = %21
  %28 = load i32, i32* %5, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %5, align 4
  br label %14

30:                                               ; preds = %14
  %31 = load i64, i64* @__ARQMZeroBuffer, align 8
  %32 = load i32, i32* @ARQM_ZEROBYTES, align 4
  %33 = call i32 @ARQM_PushData(i64 %31, i32 %32)
  br label %34

34:                                               ; preds = %30, %8
  ret void
}

declare dso_local i32 @ARQM_PushData(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
